Fixed text alignment to center on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -178,6 +178,10 @@ a {
 }
 
 @media (max-width: 600px) {
+  #user-name {
+    text-align: center;
+  }
+
   .section--page {
     padding-top: 1em;
     padding-bottom: 1em;
